--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -14,7 +14,7 @@
         <mat-form-field>
 
           <mat-label>Identifiacion del docente</mat-label>
-          <input matInput formControlName="identificacion sdf" [(ngModel)]="busquedaDocente" required>
+          <input matInput formControlName="identificacion" [(ngModel)]="busquedaDocente" required>
 
         </mat-form-field>
 
