--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -20,7 +20,7 @@
 
        
         <mat-form-field>
-          <mat-label>Nombre</mat-label>
+          <mat-label>Nombre Docente</mat-label>
           <input matInput  formControlName="nombre" required>
         </mat-form-field>
        
