--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
@@ -1,6 +1,6 @@
 
       <blockquote class="blockquote text-center">
-        <p class="mb-0" class="display-3 colorLetras">Consulta Areas</p>
+        <p class="mb-0" class="display-3 colorLetras">Areas consulta</p>
       </blockquote>
 
 
