--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-edicion/area-edicion.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-edicion/area-edicion.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
     <blockquote class="blockquote text-center">
-        <p class="mb-0" class="display-3 colorLetras">area-registro</p>
+        <p class="mb-0" class="display-3 colorLetras">Area Edición</p>
         <footer class="blockquote-footer">Registro de las areas</footer>
     </blockquote>
 
@@ -10,7 +10,7 @@
 
       <div class="input-group input-group-sm mb-3">
      
-        <div class="input-group mb-3 input divflex" >
+        <div class="input-group mb-3 input divflex" style="margin-left: 50%; margin-top: 30px;">
 
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroup-sizing-default">{{area.codigoArea}}</span>
