--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
@@ -4,10 +4,9 @@
         <div class="col-md">
 
                 <blockquote class="blockquote " style="margin-bottom: 80px;">
+
                     <p class="mb-0" class="display-3 colorLetras">Consulta Solicitudes de proyecto</p>
                         
-                    <mat-divider></mat-divider>
-                  
                 </blockquote>
 
 
@@ -69,8 +68,8 @@
                       <div class="col-sm">
 
                         
-                        <span>Identificacion de estudiante: </span>
-                        <mat-label>{{proyecto.identificacionEstudiante}}</mat-label>
+                        <p><mark>Identificacion Estudiante:   </mark>{{proyecto.identificacionEstudiante}}</p> 
+
 
 
                       </div>
