--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-registro/area-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-registro/area-registro.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     
-    <blockquote class="blockquote text-center">
-        <p class="mb-0" class="display-3 colorLetras">area-registro</p>
+    <blockquote class="blockquote text-center" style="margin-bottom: 50px;">
+        <p class="mb-0" class="display-3 colorLetras">Area registro</p>
         <footer class="blockquote-footer">Registro de las areas</footer>
     </blockquote>
 
@@ -18,7 +18,7 @@
 
             <input type="text" placeholder="Digite el codigo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="codigoArea" [ngClass]="{ 'is-invalid': control.codigoArea.errors && control.codigoArea.touched }" > 
 
-            <div *ngIf="control.codigoArea.errors" class="invalid-feedback" style="margin-left: 13%;">
+            <div *ngIf="control.codigoArea.errors" class="invalid-feedback">
               
               <div *ngIf="control.codigoArea.errors.required">Debe digitar un valor para el codigo</div>
               <div *ngIf="control.codigoArea.errors.maxlength">No se puede digitar mas de 2 caracteres</div>
@@ -37,7 +37,7 @@
 
             <input type="text" placeholder="Digite el Nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="nombreArea" [ngClass]="{ 'is-invalid': control.nombreArea.errors && control.nombreArea.touched }" > 
 
-            <div *ngIf="control.nombreArea.errors" class="invalid-feedback" style="margin-left: 11%;">
+            <div *ngIf="control.nombreArea.errors" class="invalid-feedback">
               
               <div *ngIf="control.nombreArea.errors.required">Debe digitar un valor para el nombre</div>
 
