--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
@@ -2,7 +2,7 @@
 <div class="container" *ngIf="areas.length>0">
 
   <blockquote class="blockquote text-center">
-    <p class="mb-0" class="display-3 colorLetras">Registro De Asignaturas</p>
+    <p class="mb-0" class="display-3 colorLetras">Registro de asignaturas</p>
     <footer class="blockquote-footer">Guardar todo lo referente a los datos de la asignatura</footer>
   </blockquote>
 
@@ -24,7 +24,7 @@
                   
                 <button mat-stroked-button style="border-color: #339240; "  (click)="buscar()"> <mat-icon>search</mat-icon> </button>
 
-                  <div *ngIf="control.codigoAsignatura.errors" class="invalid-feedback" style="margin-left: 21%;">
+                  <div *ngIf="control.codigoAsignatura.errors" class="invalid-feedback">
                     
                     <div *ngIf="control.codigoAsignatura.errors.required">Debe digitar un valor para la cedula</div>
                     <div *ngIf="control.codigoAsignatura.errors.maxlength">No se puede digitar mas de 10 caracteres</div>
@@ -43,7 +43,7 @@
                     <input type="text" placeholder="Digite el nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  class="form-control"  formControlName="nombreAsignatura" [ngClass]="{ 'is-invalid': control.nombreAsignatura.errors && control.nombreAsignatura.touched }">
                     
                   
-                    <div *ngIf="control.nombreAsignatura.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    <div *ngIf="control.nombreAsignatura.errors" class="invalid-feedback">
                       
                       <div *ngIf="control.nombreAsignatura.errors.required">Debe digitar un valor para el nombre</div>
           
@@ -69,9 +69,9 @@
                 
                 </select>
 
-                <div *ngIf="control.areaAsignatura.errors" class="invalid-feedback" style="margin-left: 7%;">
+                <div *ngIf="control.areaAsignatura.errors" class="invalid-feedback">
                     
-                  <div *ngIf="control.areaAsignatura.errors.validArea">Debe seleccionar un valor</div>
+                  <div *ngIf="control.areaAsignatura.errors.validArea" style="margin-right: 59%;" >Debe seleccionar un valor</div>
       
                 </div>
 
@@ -85,7 +85,7 @@
                   </div>
                   <input type="text"  placeholder="Digite la descripción" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" class="form-control"  formControlName="descripcionAsignatura" [ngClass]="{ 'is-invalid': control.descripcionAsignatura.errors && control.descripcionAsignatura.touched }">
 
-                  <div *ngIf="control.descripcionAsignatura.errors" class="invalid-feedback" style="margin-left: 25%;">
+                  <div *ngIf="control.descripcionAsignatura.errors" class="invalid-feedback">
                       
                     <div *ngIf="control.descripcionAsignatura.errors.required">Debe digitar un valor </div>
         
