--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/consulta-solicitudes/consulta-solicitudes.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/consulta-solicitudes/consulta-solicitudes.component.html
@@ -21,6 +21,7 @@
             <th scope="col">Resumen</th>
             <th scope="col">Estado</th>
             <th scope="col">Registrar Pendon</th>
+            <th scope="col">Editar</th>
 
         </tr>
         </thead>
@@ -34,6 +35,8 @@
             <td>{{ proyecto.titulo}}</td>
             <td>{{proyecto.resumen}}</td>
             <td>{{proyecto.estado}}</td>
+            <td></td>
+            
         </tr>
 
     </tbody>
