--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
@@ -68,8 +68,7 @@
                       <div class="col-sm">
 
                         
-                        <p><mark>Identificacion Estudiante:   </mark>{{proyecto.identificacionEstudiante}}</p> 
-
+                        <p><mark>Identificacion Estudiante:   </mark>{{proyecto.identificacionEstudiante}}</p>
 
 
                       </div>
@@ -104,11 +103,11 @@
               
                         <div class="col-sm" >
 
-                          <span class="badge badge-secondary">identificacion proyecto: </span>{{proyecto.idProyecto}}
+                          <p><mark>Referencia Proyecto:   </mark>{{proyecto.idProyecto}}</p>
 
                           <br>
 
-                          <span class="badge badge-secondary">Titulo proyecto: </span>{{proyecto.titulo}}
+                          <p><mark>Titulo proyecto:   </mark>{{proyecto.titulo}}</p>
 
 
                         </div>
@@ -116,12 +115,13 @@
 
                         <div class="col-sm">
 
-                          
-                          <span class="badge badge-secondary">resumen proyecto: </span>{{proyecto.resumen}}
 
+                          <p><mark>Resumen proyecto   </mark>{{proyecto.resumen}}</p>
+                          
                           <br>
 
-                          <span class="badge badge-secondary">Metodologia proyecto: </span>{{proyecto.metodologia}}
+
+                          <p><mark>Resumen proyecto   </mark>{{proyecto.metodologia}}</p>
 
 
                         </div>
@@ -149,11 +149,12 @@
             
                       <div class="col-sm" >
 
-                        <span class="badge badge-secondary">identificacion Docente: </span>{{docente.identificacion}}
+                        
+                        <p><mark>Docente identificacion   </mark>{{docente.identificacion}}</p>
 
                         <br>
 
-                        <span class="badge badge-secondary">docente Nombre: </span>{{docente.nombre}}
+                        <p><mark>Nombre del docente   </mark>{{docente.nombre}}</p>
 
 
                       </div>
@@ -161,12 +162,11 @@
 
                       <div class="col-sm">
 
-                        
-                        <span class="badge badge-secondary">Especialidad Docente: </span>{{docente.descripcion}}
+                        <p><mark>Especialidad   </mark>{{docente.descripcion}}</p>
 
                         <br>
 
-                        <span class="badge badge-secondary"> Asignatura Docente: </span>{{docente.asignaturas}}
+                        <p><mark>Asignatura del docente   </mark>{{docente.asignaturas}}</p>
 
 
                       </div>
@@ -195,11 +195,14 @@
           
                     <div class="col-sm" >
 
-                      <span class="badge badge-secondary">Coddigo Asignatura: </span>{{asignatura.codigoAsignatura}}
+
+                      
+                      <p><mark>Referencia Asignatura   </mark>{{asignatura.codigoAsignatura}}</p>
 
                       <br>
 
-                      <span class="badge badge-secondary">Nombre Asignatura: </span>{{asignatura.nombreAsignatura}}
+                      
+                      <p><mark>Nombre de la Asignatura   </mark>{{asignatura.nombreAsignatura}}</p>
 
 
                     </div>
@@ -208,11 +211,12 @@
                     <div class="col-sm">
 
                       
-                      <span class="badge badge-secondary">asignatura Descripcion: </span>{{asignatura.descripcionAsignatura}}
+                      <p><mark>Asignatura Descripcion  </mark>{{asignatura.descripcionAsignatura}}</p>
 
                       <br>
 
-                      <span class="badge badge-secondary">Area Asignatura:  </span>{{asignatura.areaAsignatura}}
+                      
+                      <p><mark>Area de la asignatura   </mark>{{asignatura.areaAsignatura}}</p>
 
 
                     </div>
