--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -15,7 +15,7 @@
 
           <mat-label>Identifiacion del docente</mat-label>
           <input matInput formControlName="identificacion" [(ngModel)]="busquedaDocente" required>
-
+          
         </mat-form-field>
 
        
@@ -25,10 +25,8 @@
         </mat-form-field>
        
         
-        </div>
+        
 
-
-        <div class="col-sm" >
 
     
             <mat-form-field>
@@ -44,22 +42,22 @@
                 </mat-option>
               </mat-select>
             </mat-form-field>
-    
+
+            
+        <button  (click)="buscarDocente()"  class="btn btn-light" style="margin-left: 15px;">consultar</button>
+
 
         </div>
 
 
-      </div>
-
-      <div style="margin-bottom: 50px; margin-top: 50px;" class="text-center" >
-
-        <button  (click)="buscarDocente()"  class="btn btn-light">consultar</button>
 
 
       </div>
 
+  
 
-      <div style="margin-top: 10px;">
+
+      <div style="margin-top: 20px;">
         <button mat-button matStepperNext >Siguiente</button>
       </div>
 
@@ -77,9 +75,9 @@
       <ng-template matStepLabel>Datos del Estudiante</ng-template>
 
 
-      <div class="row">
+    <div class="row">
 
-        <div class="col-sm">
+      <div class="col-sm">
           
         <mat-form-field>
 
@@ -88,6 +86,7 @@
 
         </mat-form-field>
 
+        
        
         <mat-form-field>
           <mat-label>Nombre completo</mat-label>
@@ -117,33 +116,28 @@
           </mat-form-field>
 
 
-          <mat-form-field>
+          <mat-form-field style="margin-right: 10PX;">
             <mat-label>Semestre</mat-label>
             <input matInput formControlName="semestre" required type="number">
           </mat-form-field>
 
-
           
-
-        
-        </div>
-
-
-
-
-      </div>
-
-
-      <div style="margin-bottom: 50px; margin-top: 50px;" class="text-center" >
-
+          
         <button  (click)="buscarEstudiante()"  class="btn btn-light">consultar</button>
 
 
+        
       </div>
 
+        
 
 
-      <div>
+    </div>
+
+
+
+
+      <div style="margin-top: 20px;">
         <button mat-button matStepperPrevious>Regresar</button>
         <button mat-button matStepperNext style="margin-left: 80%;">Siguiente</button>
       </div>
@@ -203,7 +197,7 @@
 
 
 
-      <div>
+      <div style="margin-top: 20px;">
 
         <button mat-button matStepperPrevious>Regresar</button>
         <button mat-button matStepperNext style="margin-left: 80%;">Siguiente</button>
@@ -223,7 +217,11 @@
   <mat-step>
 
     <ng-template matStepLabel>Done</ng-template>
-    <p>Operacion Terminada</p>
+    
+
+    <div class="text-center">
+      <h1>Registro Finalizado</h1>
+    </div>
 
     
       <div style="margin-bottom: 50px; margin-top: 50px;" class="text-center" >
