consulta de proyectos

--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/consulta-solicitudes/consulta-solicitudes.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/consulta-solicitudes/consulta-solicitudes.component.html
@@ -35,7 +35,8 @@
             <td>{{ proyecto.titulo}}</td>
             <td>{{proyecto.resumen}}</td>
             <td>{{proyecto.estado}}</td>
-            <td></td>
+            <td ngIf="proyecto.estado==='Aprobado'">ver</td>
+            <td ngIf="proyecto.estado==='Aprobado'">ver</td>
             
         </tr>
 
