--- a/ExpoSoftware/ClientApp/src/app/comite/estudiante/estudiante-registro/estudiante-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/estudiante/estudiante-registro/estudiante-registro.component.html
@@ -14,12 +14,12 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroup-sizing-default">Identificacion</span>
                     </div>
-                    <input type="text" placeholder="Digite la identificacion" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="idEstudiante" [ngClass]="{ 'is-invalid': control.idEstudiante.errors && control.idEstudiante.touched }"> 
+                    <input type="text" placeholder="Digite la identificacion" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="identificacion" [ngClass]="{ 'is-invalid': control.identificacion.errors && control.identificacion.touched }"> 
                
-                    <div *ngIf="control.idEstudiante.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    <div *ngIf="control.identificacion.errors" class="invalid-feedback" style="margin-left: 21%;">
                     
-                        <div *ngIf="control.idEstudiante.errors.required">Debe digitar un valor para la cedula</div>
-                        <div *ngIf="control.idEstudiante.errors.maxlength">No se puede digitar mas de 10 caracteres</div>
+                        <div *ngIf="control.identificacion.errors.required">Debe digitar un valor para la cedula</div>
+                        <div *ngIf="control.identificacion.errors.maxlength">No se puede digitar mas de 10 caracteres</div>
     
                     </div>
                     
@@ -30,12 +30,12 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text" id="inputGroup-sizing-default">Nombre</span>
                     </div>
-                    <input type="text" placeholder="Digite el nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  class="form-control"  formControlName="nombreCompleto" [ngClass]="{ 'is-invalid': control.nombreCompleto.errors && control.nombreCompleto.touched }">
+                    <input type="text" placeholder="Digite el nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  class="form-control"  formControlName="nombre" [ngClass]="{ 'is-invalid': control.nombre.errors && control.nombre.touched }">
                     
                   
-                    <div *ngIf="control.nombreCompleto.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    <div *ngIf="control.nombre.errors" class="invalid-feedback" style="margin-left: 21%;">
                       
-                      <div *ngIf="control.nombreCompleto.errors.required">Debe digitar un valor para el nombre</div>
+                      <div *ngIf="control.nombre.errors.required">Debe digitar un valor para el nombre</div>
           
                     </div>
 
@@ -49,16 +49,16 @@
                   <label class="input-group-text" for="asignatura">Asignaturas</label>
                 </div>
 
-                <select class="custom-select" id="asignatura" name="asignatura"  formControlName="codigoAsignatura" class="form-control" [ngClass]="{ 'is-invalid': control.codigoAsignatura.errors && control.codigoAsignatura.touched }">
+                <select class="custom-select" id="asignatura" name="asignatura"  formControlName="asignatura" class="form-control" [ngClass]="{ 'is-invalid': control.asignatura.errors && control.asignatura.touched }">
                   <option selected>seleccionar</option>
 
                   <option *ngFor="let item of asignaturas"  value={{item.codigoAsignatura}}>{{item.nombreAsignatura}}</option>
                 
                 </select>
 
-                <div *ngIf="control.codigoAsignatura.errors" class="invalid-feedback" style="margin-left: 7%;">
+                <div *ngIf="control.asignatura.errors" class="invalid-feedback" style="margin-left: 7%;">
                     
-                  <div *ngIf="control.codigoAsignatura.errors.ValidaAsignatura">Debe seleccionar un valor</div>
+                  <div *ngIf="control.asignatura.errors.ValidaAsignatura">Debe seleccionar un valor</div>
       
                 </div>
 
