--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
@@ -248,7 +248,7 @@
                     <select class="custom-select" id="areaA" name="areaAsignatura" [(ngModel)]="proyecto.estado " >
                       
                       <option selected>Revision</option>
-                      <option value="Modificar Revision">Modificar revision</option>
+                      <option value="Modificar">Modificar revision</option>
                       <option value="Rechazado">Rechazado</option>
                       <option value="Aprobado">Aprobado</option>
                     
