--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-consulta/proyecto-consulta.component.html
@@ -121,7 +121,7 @@
                           <br>
 
 
-                          <p><mark>Resumen proyecto   </mark>{{proyecto.metodologia}}</p>
+                          <p><mark>Resumen metodologia usada  </mark>{{proyecto.metodologia}}</p>
 
 
                         </div>
