agregando cosas de diseño

--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -94,7 +94,7 @@
                   </div>
 
                   <mat-list-item data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                    <mat-icon>layers  </mat-icon> Rubrica
+                    <mat-icon>account_balance_wallet  </mat-icon> Rubrica
                   </mat-list-item>
 
                   <div id="collapseFour" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
