--- a/ExpoSoftware/ClientApp/src/app/comite/rubrica/rubrica-consulta/rubrica-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/rubrica/rubrica-consulta/rubrica-consulta.component.html
@@ -1,1 +1,66 @@
-<p>rubrica-consulta works!</p>
+<blockquote class="blockquote " style="margin-bottom: 80px;">
+    
+    <p class="mb-0" class="display-3 colorLetras">Consulta Rubricas Habilitadas</p>
+        
+    <mat-divider></mat-divider>
+  
+</blockquote>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+  
+    <!-- Position Column -->
+    <ng-container matColumnDef="Referencia">
+      <th mat-header-cell *matHeaderCellDef>Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.idRubrica}} </td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="Titulo">
+      <th mat-header-cell *matHeaderCellDef> Titulo </th>
+      <td mat-cell *matCellDef="let element"> {{element.titulo}} </td>
+    </ng-container>
+
+       <!-- Symbol Column -->
+       <ng-container matColumnDef="IdArea">
+        <th mat-header-cell *matHeaderCellDef> Id area </th>
+        <td mat-cell *matCellDef="let element"> {{element.codigoArea}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Area">
+        <th mat-header-cell *matHeaderCellDef>Area</th>
+        <td mat-cell *matCellDef="let element">
+            <div *ngFor="let item of areas">
+                <div *ngIf="item.codigoArea===element.codigoArea">
+                    {{item.nombreArea}}
+                </div>
+            </div>
+        </td>
+      </ng-container>
+
+  
+    <!-- Weight Column -->
+    <ng-container matColumnDef="Preguntas">
+      <th mat-header-cell *matHeaderCellDef> Preguntas </th>
+      <td mat-cell *matCellDef="let element"><div>Ver</div></td>
+    </ng-container>
+  
+ 
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    
+  </table>
+
+  <div>
+      
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+    
+  </div>
+  
+  
+
+  
