--- a/ExpoSoftware/ClientApp/src/app/comite/gestion-preguntas/gestion-preguntas.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/gestion-preguntas/gestion-preguntas.component.html
@@ -1,5 +1,11 @@
-<div class="row">
+    
+<blockquote class="blockquote text-center" style="margin-bottom: 80px;">
 
+        <p class="mb-0" class="display-3 colorLetras">Gestion de Preguntas</p>
+</blockquote>
+
+
+<div class="row">
 
     <div class="col-sm-4">
 
@@ -13,11 +19,6 @@
 
     <div class="col-sm-8">
 
-        <blockquote class="blockquote " style="margin-bottom: 80px;">
-
-            <p class="mb-0" class="display-3 colorLetras">Gestion de Preguntas</p>
-                
-        </blockquote>
 
             <div class="table-responsive">
 
@@ -30,6 +31,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Pregunta</th>
                         <th scope="col">Valor</th>
+                        <th scope="Eliminar" class="text-center">Eliminar</th>
 
                     </tr>
                     </thead>
@@ -41,7 +43,7 @@
                         <th scope="row">{{ i + 1 }}</th>
                         <td>{{ pregunta.pregunta }} </td>
                         <td>{{ pregunta.valor}}</td>
-                        <th> </th>
+                        <th class="text-center"><a routerLink="/preguntasGestion/{{id}}" (click)="eliminar(pregunta.id)"><mat-icon>delete</mat-icon></a></th>
                     </tr>
 
                     </tbody>
