--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -58,7 +58,7 @@
 
 
       <div style="margin-top: 20px;">
-        <button mat-button matStepperNext >Siguiente</button>
+        <button mat-button matStepperNext (click)="consultarV()">Siguiente</button>
       </div>
 
     </form>
