--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -132,6 +132,12 @@
               </div>
 
 
+
+              <mat-list-item style="margin-top: 25px; font-size: 20px;">
+                Docente Evaluador
+              </mat-list-item>
+
+
                   
 
 
