--- a/ExpoSoftware/ClientApp/src/app/User/user-login/user-login.component.html
+++ b/ExpoSoftware/ClientApp/src/app/User/user-login/user-login.component.html
@@ -6,8 +6,8 @@
     </blockquote>
 
     <form [formGroup]="loginGroup">
-        <div class="input-group input-group-sm mb-3">
-            <div class="input-group mb-3 input divflex" style="margin-left: 31%;" >
+        <div class="text-center" style="margin-left: 200px;" > 
+            <div class="input-group mb-3 input divflex"  >
                 <div>
                     <span class="input-group-text" id="inputGroup-sizing-default">Usuario</span>
                 </div>
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="input-group mb-3 input divflex" style="margin-left: 31%;">
+            <div class="input-group mb-3 input divflex" >
                 <div>
                     <span class="input-group-text" id="inputGroup-sizing-default">Contraseña</span>
                 </div>
@@ -33,18 +33,16 @@
                 </div>
             </div>
 
-            <div class="text-center">
-
-                <button mat-stroked-button style="border-color: #339240; margin-left: 400px ;margin-right: 20px; margin-top: 20px;"  (click)="onSubmit()" [disabled]="loginGroup.invalid" >Iniciar sesion</button>
-     
-                <button mat-stroked-button style="border-color: #339240; " type="reset" >Limpiar</button>
-     
-          </div>
-
-
-
-
+       
         </div>
+
+        <div class="text-center">
+
+            <button mat-stroked-button style="border-color: #339240;margin-left: 90px; margin-right: 20px; margin-top: 20px;"  (click)="onSubmit()" [disabled]="loginGroup.invalid" >Iniciar sesion</button>
+ 
+            <button mat-stroked-button style="border-color: #339240; " type="reset" >Limpiar</button>
+ 
+      </div>
 
     </form>
 
