--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -40,7 +40,7 @@
 
                   <div style="margin-left: 10px;">
                         
-                     
+                   {{usuario}}
 
                   </div>
 
