--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -5,7 +5,7 @@
     <mat-toolbar color="primary" class="example-toolbar" >
 
         <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-        <h1 class="example-app-name">Menu Expo-Sofware Admin</h1>
+        <h1 class="example-app-name">Menu Expo-Sofware</h1>
         
       <span class="example-spacer"></span>
 
@@ -16,7 +16,7 @@
 
       </a>
 
-      <button mat-icon-button aria-label="Example icon-button with a menu" (click)="logout()">
+      <button mat-icon-button aria-label="Example icon-button with a menu" (click)="logout()" *ngIf="usuario!='no user'">
         cerrar
       </button>
 
