operaciones de commit

--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,7 +17,7 @@
       </a>
 
       <button mat-icon-button aria-label="Example icon-button with a menu" (click)="logout()" *ngIf="usuario!='no user'">
-        cerrar
+        Salir
       </button>
 
     </mat-toolbar>
